fix: Update README and swagger.
