# docs/swagger.json
@@ -743,7 +743,7 @@
                 "tags": [
                     "video"
                 ],
-                "summary": "GetVideosList",
+                "summary": "GetVideos",
                 "parameters": [
                     {
                         "type": "string",
@@ -753,6 +753,38 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/video/lists": {
+            "get": {
+                "description": "get videos by userId",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "video"
+                ],
+                "summary": "GetVideosList",
                 "responses": {
                     "200": {
                         "description": "Success",
